Add allOf support
