# examples/petstore3-server-go-echo/server/models.go
@@ -24,6 +24,17 @@ type Category struct {
 	Name *string `json:"name,omitempty" validate:"omitempty"`
 }
 
+// CreatePet
+type CreatePet struct {
+	Category  *Category `json:"category,omitempty" validate:"omitempty"`
+	Name      string    `json:"name" validate:"required"`
+	PhotoURLs []string  `json:"photoUrls" validate:"required,dive,required"`
+
+	// pet status in the store
+	Status *string `json:"status,omitempty" validate:"omitempty,oneof=available pending sold"`
+	Tags   *[]Tag  `json:"tags,omitempty" validate:"omitempty,dive,required"`
+}
+
 // CreateUsersWithListInputJSONRequest
 type CreateUsersWithListInputJSONRequest []User
 
@@ -85,14 +96,8 @@ type Order struct {
 
 // Pet
 type Pet struct {
-	Category  *Category `json:"category,omitempty" validate:"omitempty"`
-	ID        *int      `json:"id,omitempty" validate:"omitempty,gt=0"`
-	Name      string    `json:"name" validate:"required"`
-	PhotoURLs []string  `json:"photoUrls" validate:"required,dive,required"`
-
-	// pet status in the store
-	Status *string `json:"status,omitempty" validate:"omitempty,oneof=available pending sold"`
-	Tags   *[]Tag  `json:"tags,omitempty" validate:"omitempty,dive,required"`
+	ID int `json:"id" validate:"required,gt=0"`
+	CreatePet
 }
 
 // Tag
