# examples/petstore3-server-go-echo/server/openapi_generated.yml
@@ -47,13 +47,13 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/Pet'
+                            $ref: '#/components/schemas/CreatePet'
                     application/x-www-form-urlencoded:
                         schema:
-                            $ref: '#/components/schemas/Pet'
+                            $ref: '#/components/schemas/CreatePet'
                     application/xml:
                         schema:
-                            $ref: '#/components/schemas/Pet'
+                            $ref: '#/components/schemas/CreatePet'
                 description: Create a new pet in the store
                 required: true
             responses:
@@ -486,6 +486,40 @@ components:
             type: object
             xml:
                 name: category
+        CreatePet:
+            properties:
+                category:
+                    $ref: '#/components/schemas/Category'
+                name:
+                    example: doggie
+                    type: string
+                photoUrls:
+                    items:
+                        type: string
+                        xml:
+                            name: photoUrl
+                    type: array
+                    xml:
+                        wrapped: true
+                status:
+                    description: pet status in the store
+                    enum:
+                        - available
+                        - pending
+                        - sold
+                    type: string
+                tags:
+                    items:
+                        $ref: '#/components/schemas/Tag'
+                    type: array
+                    xml:
+                        wrapped: true
+            required:
+                - name
+                - photoUrls
+            type: object
+            xml:
+                name: createpet
         Customer:
             properties:
                 address:
@@ -536,42 +570,17 @@ components:
             xml:
                 name: order
         Pet:
-            properties:
-                category:
-                    $ref: '#/components/schemas/Category'
-                id:
-                    example: 10
-                    exclusiveMinimum: 0
-                    format: int64
-                    type: integer
-                name:
-                    example: doggie
-                    type: string
-                photoUrls:
-                    items:
-                        type: string
-                        xml:
-                            name: photoUrl
-                    type: array
-                    xml:
-                        wrapped: true
-                status:
-                    description: pet status in the store
-                    enum:
-                        - available
-                        - pending
-                        - sold
-                    type: string
-                tags:
-                    items:
-                        $ref: '#/components/schemas/Tag'
-                    type: array
-                    xml:
-                        wrapped: true
-            required:
-                - name
-                - photoUrls
-            type: object
+            allOf:
+                - properties:
+                    id:
+                        example: 10
+                        exclusiveMinimum: 0
+                        format: int64
+                        type: integer
+                  required:
+                    - id
+                  type: object
+                - $ref: '#/components/schemas/CreatePet'
             xml:
                 name: pet
         Tag:
